--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-ga": "^2.3.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
@@ -25,6 +26,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.0.0",
+    "react-lottie": "^1.2.3",
     "react-quill": "^1.3.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
